--- a/src/components/Widgets/ConfirmationModal.module.scss
+++ b/src/components/Widgets/ConfirmationModal.module.scss
@@ -25,7 +25,7 @@
   color: rgb(127, 127, 127);
   font-family: sans-serif;
   &:last-child {
-    margin-bottom: 12px;
+    margin-bottom: 24px;
   }
 }
 .buttons {
